--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
         <h2>Markus Schmidbauer<br></h2>
         <p>I'm a <span class="typed" data-typed-items="Software Engineer, Game Developer">Software Engineer</span></p>
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/markus-schmidbauer-3b87171a0/"><i class="bi bi-linkedin"></i></a>
-          <a href="https://github.com/00Markus0"><i class="bi bi-github"></i></a>
-          <a href="mailto:00markus0@gmail.com"><i class="bi bi-mailbox2"></i></a>
+          <a href="https://www.linkedin.com/in/markus-schmidbauer-3b87171a0/" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/00Markus0"><i class="bi bi-github" target="_blank" title="Github"></i></a>
+          <a href="https://scholar.google.com/citations?user=klFFg6kAAAAJ&hl=en&oi=ao" target="_blank" title="Google Scholar"><i class="bi bi-mortarboard"></i></a>
+          <a href="mailto:00markus0@gmail.com"><i class="bi bi-mailbox2" target="_blank" title="Write a mail"></i></a>
         </div>
       </div>
 
@@ -335,7 +336,6 @@
             <li data-filter=".filter-app">Mobile</li>
             <li data-filter=".filter-product">Games</li>
             <li data-filter=".filter-branding">Web</li>
-            <li data-filter=".filter-books">Books</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -344,10 +344,11 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
-                  <p>SolarLens</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Mobile 1</h4>
+                  <p>SolarLens, educational AR app</p>
+                  <!--<a href="portfolio-details.html" title="More Details" class=" preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                  <a href="https://github.com/Lukimuc/SolarLens" title="Github" class="glightbox preview-link"><i class="bi bi-github"></i></a>
+                  <a href="https://xplorerday.de/index.php/expo" title="Exhibition" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -356,10 +357,10 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Game 1</h4>
+                  <p>The Cure's Quest, RPG shooter game</p>
+                  <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                  <a href="https://00markus0.itch.io/cures-quest-demo" title="Itch" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -368,34 +369,23 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Branding 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Web 1</h4>
+                  <p>Crypto-Answer, question-answering AI model about cryptocurrency</p>
+                  <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                  <a href="https://github.com/00Markus0/Crypto-Answer" title="Github" class="details-link"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Books 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>App 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <p>URTogether, get together with students</p>
+                  <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                  <!--<a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -404,46 +394,35 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Game 2</h4>
+                  <p>Creep-Out: VR, Horror game</p>
+                  <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                  <a href="https://github.com/00Markus0/Creep-out-vr" title="Github" class="details-link"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/branding-2.gif" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Branding 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Web 2</h4>
+                  <p>Songs Tindern, like Spotify songs by swiping!</p>
+                  <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                  <a href="https://github.com/ragor114/SongsTindern" title="Github" class="details-link"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Books 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>App 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-3.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <p>M1nerva, prototype for literature managment app</p>
+                  <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                  <a href="https://o959q8.axshare.com/start.html#id=py55m9" title="Axure" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -452,10 +431,10 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-3.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Game 3</h4>
+                  <p>AI PC-builder, get the help of an AI NPC tutor, master thesis</p>
+                  <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                  <!--<a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -464,25 +443,14 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Branding 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-3.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Web 3</h4>
+                  <p>Autonomous driving during adverse weather conditions, bachelor thesis</p>
+                  <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                  <!--<a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Books 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
 
           </div><!-- End Portfolio Container -->
 
@@ -586,7 +554,11 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>For inquiries, contact me under my <a href="mailto:00markus0@gmail.com">e-mail adress</a>
+          <br> Feel free to contact me about any projects shown on my portfolio.
+          <br> I am currently looking for jobs as a Software Engineer or Game Developer and am happy to share my Resume.
+        </p>
+
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -598,18 +570,18 @@
               <div class="info-item d-flex align-items-center">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
-                  <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <h3>Location</h3>
+                  <p>Munich, Bavaria, Germany</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
 
             <div class="col-lg-4">
               <div class="info-item d-flex align-items-center">
-                <i class="bi bi-telephone flex-shrink-0"></i>
+                <i class="bi bi-linkedin"></i>
                 <div>
-                  <h3>Call<br></h3>
-                  <p>+1 5589 55488 55</p>
+                  <h3>LinkedIn<br></h3>
+                  <p><a href="https://www.linkedin.com/in/markus-schmidbauer-3b87171a0/" target="_blank">Markus Schmidbauer</a></p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -619,7 +591,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email</h3>
-                  <p>info@example.com</p>
+                  <p><a href="mailto:00markus0@gmail.com">00markus0[at]gmail.com</a></p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -627,6 +599,7 @@
           </div>
         </div>
 
+        <!--
         <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="300">
           <div class="row gy-4">
 
@@ -655,7 +628,7 @@
             </div>
 
           </div>
-        </form><!-- End Contact Form -->
+        </form>End Contact Form -->
 
       </div>
 
@@ -665,18 +638,18 @@
 
   <footer id="footer" class="footer light-background">
     <div class="container">
-      <h3 class="sitename">Folio</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">Portfolio</h3>
+      <p>Portfolio of Markus Schmidbauer.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+
+        <a href="https://www.linkedin.com/in/markus-schmidbauer-3b87171a0/" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/00Markus0"><i class="bi bi-github" target="_blank" title="Github"></i></a>
+        <a href="https://scholar.google.com/citations?user=klFFg6kAAAAJ&hl=en&oi=ao" target="_blank" title="Google Scholar"><i class="bi bi-mortarboard"></i></a>
+        <a href="mailto:00markus0@gmail.com"><i class="bi bi-mailbox2" target="_blank" title="Write a mail"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Folio</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">Markus Schmidbauer</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
