fixed bugged Links

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <p>I'm a <span class="typed" data-typed-items="Software Engineer, Game Developer">Software Engineer</span></p>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/markus-schmidbauer-3b87171a0/" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
-          <a href="https://github.com/00Markus0"><i class="bi bi-github" target="_blank" title="Github"></i></a>
+          <a href="https://github.com/00Markus0" target="_blank" title="Github"><i class="bi bi-github" ></i></a>
           <a href="https://scholar.google.com/citations?user=klFFg6kAAAAJ&hl=en&oi=ao" target="_blank" title="Google Scholar"><i class="bi bi-mortarboard"></i></a>
-          <a href="mailto:00markus0@gmail.com"><i class="bi bi-mailbox2" target="_blank" title="Write a mail"></i></a>
+          <a href="mailto:00markus0@gmail.com" title="Write a mail" ><i class="bi bi-mailbox2" ></i></a>
         </div>
       </div>
 
@@ -345,10 +345,9 @@
                 <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Mobile 1</h4>
-                  <p>SolarLens, educational AR app</p>
+                  <p>SolarLens, educational AR app, <a href="https://xplorerday.de/index.php/expo" target="_blank" title="Exhibition">exhibited at Deutsches Museum</a></p>
                   <!--<a href="portfolio-details.html" title="More Details" class=" preview-link"><i class="bi bi-zoom-in"></i></a>-->
-                  <a href="https://github.com/Lukimuc/SolarLens" title="Github" class="glightbox preview-link"><i class="bi bi-github"></i></a>
-                  <a href="https://xplorerday.de/index.php/expo" title="Exhibition" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://github.com/Lukimuc/SolarLens" target="_blank" title="Github" class="details-link"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -360,7 +359,7 @@
                   <h4>Game 1</h4>
                   <p>The Cure's Quest, RPG shooter game</p>
                   <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
-                  <a href="https://00markus0.itch.io/cures-quest-demo" title="Itch" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://00markus0.itch.io/cures-quest-demo" target="_blank" title="Itch" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -372,7 +371,7 @@
                   <h4>Web 1</h4>
                   <p>Crypto-Answer, question-answering AI model about cryptocurrency</p>
                   <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
-                  <a href="https://github.com/00Markus0/Crypto-Answer" title="Github" class="details-link"><i class="bi bi-github"></i></a>
+                  <a href="https://github.com/00Markus0/Crypto-Answer" target="_blank" title="Github" class="details-link"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -397,7 +396,7 @@
                   <h4>Game 2</h4>
                   <p>Creep-Out: VR, Horror game</p>
                   <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
-                  <a href="https://github.com/00Markus0/Creep-out-vr" title="Github" class="details-link"><i class="bi bi-github"></i></a>
+                  <a href="https://github.com/00Markus0/Creep-out-vr" target="_blank" title="Github" class="details-link"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -409,7 +408,7 @@
                   <h4>Web 2</h4>
                   <p>Songs Tindern, like Spotify songs by swiping!</p>
                   <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
-                  <a href="https://github.com/ragor114/SongsTindern" title="Github" class="details-link"><i class="bi bi-github"></i></a>
+                  <a href="https://github.com/ragor114/SongsTindern" target="_blank" title="Github" class="details-link"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -422,7 +421,7 @@
                   <h4>App 3</h4>
                   <p>M1nerva, prototype for literature managment app</p>
                   <!--<a href="portfolio-details.html" title="More Details" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
-                  <a href="https://o959q8.axshare.com/start.html#id=py55m9" title="Axure" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://o959q8.axshare.com/start.html#id=py55m9" target="_blank" title="Axure" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -643,9 +642,9 @@
       <div class="social-links d-flex justify-content-center">
 
         <a href="https://www.linkedin.com/in/markus-schmidbauer-3b87171a0/" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/00Markus0"><i class="bi bi-github" target="_blank" title="Github"></i></a>
+        <a href="https://github.com/00Markus0" target="_blank" title="Github"><i class="bi bi-github" ></i></a>
         <a href="https://scholar.google.com/citations?user=klFFg6kAAAAJ&hl=en&oi=ao" target="_blank" title="Google Scholar"><i class="bi bi-mortarboard"></i></a>
-        <a href="mailto:00markus0@gmail.com"><i class="bi bi-mailbox2" target="_blank" title="Write a mail"></i></a>
+        <a href="mailto:00markus0@gmail.com" target="_blank" title="Write a mail"><i class="bi bi-mailbox2" ></i></a>
       </div>
       <div class="container">
         <div class="copyright">
@@ -670,13 +669,9 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
