--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Markus Schmidbauer - Portfolio</title>
-  <meta name="description" content="Software Developer">
-  <meta name="keywords" content="Junior Developer, software engineer">
+  <meta name="description" content="Software Engineer">
+  <meta name="keywords" content="Junior Developer, software engineer, Game Developer">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -69,7 +69,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Markus Schmidbauer<br></h2>
-        <p>I'm a <span class="typed" data-typed-items="Software Engineer, Game Developer">Software Engineer</span></p>
+        <p>I'm a <span class="typed" data-typed-items="Software Engineer, Game Designer, Developer">Software Engineer</span></p>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/markus-schmidbauer-3b87171a0/" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
           <a href="https://github.com/00Markus0" target="_blank" title="Github"><i class="bi bi-github" ></i></a>
