added itch.io Link

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           <a href="https://www.linkedin.com/in/markus-schmidbauer-3b87171a0/" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
           <a href="https://github.com/00Markus0" target="_blank" title="Github"><i class="bi bi-github" ></i></a>
           <a href="https://scholar.google.com/citations?user=klFFg6kAAAAJ&hl=en&oi=ao" target="_blank" title="Google Scholar"><i class="bi bi-mortarboard"></i></a>
+          <a href="https://00markus0.itch.io/" target="_blank" title="Itch.io"><i class="bi bi-controller"></i></a>
           <a href="mailto:00markus0@gmail.com" title="Write a mail" ><i class="bi bi-mailbox2" ></i></a>
         </div>
       </div>
@@ -644,6 +645,7 @@
         <a href="https://www.linkedin.com/in/markus-schmidbauer-3b87171a0/" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/00Markus0" target="_blank" title="Github"><i class="bi bi-github" ></i></a>
         <a href="https://scholar.google.com/citations?user=klFFg6kAAAAJ&hl=en&oi=ao" target="_blank" title="Google Scholar"><i class="bi bi-mortarboard"></i></a>
+        <a href="https://00markus0.itch.io/" target="_blank" title="Itch.io"><i class="bi bi-controller"></i></a>
         <a href="mailto:00markus0@gmail.com" target="_blank" title="Write a mail"><i class="bi bi-mailbox2" ></i></a>
       </div>
       <div class="container">
